datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

// ==========================================
// ENUMS
// ==========================================

enum AccountStatus {
  ACTIVE
  SUSPENDED
  DELETED
}

enum OtpStatus {
  PENDING
  VERIFIED
  EXPIRED
  FAILED
  MAX_ATTEMPTS_EXCEEDED
}

enum SessionStatus {
  ACTIVE
  REVOKED
  EXPIRED
}

enum DevicePlatform {
  ANDROID
  IOS
  WEB
  OTHER
}

enum PaymentMode {
  UPI
  BANK_TRANSFER
  CARD
  NET_BANKING
  WALLET
  ATM
  OTHER
}

enum FraudReportStatus {
  DRAFT
  SUBMITTED
  UNDER_REVIEW
  RESOLVED
  CLOSED
}

enum SeverityLevel {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum ResourceType {
  WEBSITE
  PHONE
  EMAIL
}

enum TransactionType {
  CREDIT
  DEBIT
  OTHER
}

enum TransactionSource {
  MANUAL
  SMS_PARSER
  NOTIFICATION
  API
  OTHER
}

enum AlertType {
  SUSPICIOUS_LOGIN
  UNUSUAL_TRANSACTION
  FRAUD_WARNING
  SECURITY_ADVISORY
}

// ==========================================
// MODELS
// ==========================================

model User {
  id             String        @id @default(uuid())
  mobileNumber   String        @unique @map("mobile_number")
  email          String?       @unique @map("email")
  fullName       String?       @map("full_name")
  profilePhoto   String?       @map("profile_photo")
  accountStatus  AccountStatus @default(ACTIVE) @map("account_status")
  createdAt      DateTime      @default(now()) @map("created_at")
  updatedAt      DateTime      @updatedAt @map("updated_at")
  lastLoginAt    DateTime?     @map("last_login_at")

  // Relationships
  otpRequests    OtpRequest[]
  sessions       Session[]
  devices        Device[]
  fraudReports   FraudReport[]
  transactions   Transaction[]
  securityAlerts SecurityAlert[]
  auditLogs      AuditLog[]

  @@index([mobileNumber])
  @@index([email])
  @@map("users")
}

model OtpRequest {
  id            String    @id @default(uuid())
  mobileNumber  String    @map("mobile_number")
  userId        String?   @map("user_id")
  otpHash       String    @map("otp_hash")
  expiresAt     DateTime  @map("expires_at")
  verifiedAt    DateTime? @map("verified_at")
  attempts      Int       @default(0)
  cooldownUntil DateTime? @map("cooldown_until")
  status        OtpStatus @default(PENDING)
  createdAt     DateTime  @default(now()) @map("created_at")

  // Relationships
  user User? @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([mobileNumber, status])
  @@index([expiresAt])
  @@map("otp_requests")
}

model Session {
  id               String        @id @default(uuid())
  userId           String        @map("user_id")
  deviceId         String?       @map("device_id")
  refreshTokenHash String        @map("refresh_token_hash")
  status           SessionStatus @default(ACTIVE)
  expiresAt        DateTime      @map("expires_at")
  revokedAt        DateTime?     @map("revoked_at")
  lastUsedAt       DateTime      @default(now()) @map("last_used_at")
  ipAddress        String?       @map("ip_address")
  userAgent        String?       @map("user_agent")
  createdAt        DateTime      @default(now()) @map("created_at")

  // Relationships
  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  device Device? @relation(fields: [deviceId], references: [id], onDelete: SetNull)

  @@index([userId, status])
  @@index([expiresAt])
  @@index([refreshTokenHash])
  @@map("sessions")
}

model Device {
  id                String         @id @default(uuid())
  userId            String         @map("user_id")
  deviceFingerprint String         @map("device_fingerprint")
  platform          DevicePlatform @default(ANDROID)
  appVersion        String?        @map("app_version")
  deviceModel       String?        @map("device_model")
  pushToken         String?        @map("push_token")
  firstSeenAt       DateTime       @default(now()) @map("first_seen_at")
  lastSeenAt        DateTime       @default(now()) @map("last_seen_at")

  // Relationships
  user     User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  sessions Session[]

  @@unique([userId, deviceFingerprint])
  @@index([userId])
  @@map("devices")
}

model FraudCategory {
  id                 String        @id @default(uuid())
  code               String        @unique
  name               String
  description        String
  severity           SeverityLevel @default(MEDIUM)
  recommendedActions Json          @map("recommended_actions")
  isActive           Boolean       @default(true) @map("is_active")
  createdAt          DateTime      @default(now()) @map("created_at")
  updatedAt          DateTime      @updatedAt @map("updated_at")

  // Relationships
  fraudReports      FraudReport[]
  officialResources OfficialResource[]

  @@map("fraud_categories")
}

model OfficialResource {
  id              String         @id @default(uuid())
  authorityName   String         @map("authority_name")
  fraudCategoryId String?        @map("fraud_category_id")
  paymentMode     PaymentMode?   @map("payment_mode")
  resourceType    ResourceType   @map("resource_type")
  websiteUrl      String?        @map("website_url")
  phoneNumber     String?        @map("phone_number")
  emailAddress    String?        @map("email_address")
  instructions    String?
  priority        Int            @default(1)
  isActive        Boolean        @default(true) @map("is_active")
  lastVerifiedAt  DateTime?      @map("last_verified_at")
  createdAt       DateTime       @default(now()) @map("created_at")
  updatedAt       DateTime       @updatedAt @map("updated_at")

  // Relationships
  fraudCategory FraudCategory? @relation(fields: [fraudCategoryId], references: [id], onDelete: SetNull)

  @@index([fraudCategoryId])
  @@index([paymentMode])
  @@map("official_resources")
}

model Transaction {
  id                   String            @id @default(uuid())
  userId               String            @map("user_id")
  transactionType      TransactionType   @map("transaction_type")
  amount               Decimal           @db.Decimal(12, 2)
  currency             String            @default("INR")
  transactionReference String?           @map("transaction_reference")
  merchantName         String?           @map("merchant_name")
  merchantVpa          String?           @map("merchant_vpa")
  accountMask          String?           @map("account_mask")
  transactionDate      DateTime          @map("transaction_date")
  source               TransactionSource @default(MANUAL)
  createdAt            DateTime          @default(now()) @map("created_at")

  // Relationships
  user           User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  fraudReports   FraudReport[]
  securityAlerts SecurityAlert[]

  @@index([userId, transactionDate])
  @@index([transactionReference])
  @@map("transactions")
}

model FraudReport {
  id                   String            @id @default(uuid())
  userId               String            @map("user_id")
  fraudCategoryId      String            @map("fraud_category_id")
  paymentMode          PaymentMode       @map("payment_mode")
  amount               Decimal           @db.Decimal(12, 2)
  currency             String            @default("INR")
  incidentDate         DateTime          @map("incident_date")
  description          String
  transactionReference String?           @map("transaction_reference")
  transactionId        String?           @map("transaction_id")
  status               FraudReportStatus @default(SUBMITTED)
  createdAt            DateTime          @default(now()) @map("created_at")
  updatedAt            DateTime          @updatedAt @map("updated_at")

  // Relationships
  user          User          @relation(fields: [userId], references: [id], onDelete: Restrict)
  fraudCategory FraudCategory @relation(fields: [fraudCategoryId], references: [id], onDelete: Restrict)
  transaction   Transaction?  @relation(fields: [transactionId], references: [id], onDelete: SetNull)
  securityAlerts SecurityAlert[]

  @@index([userId, createdAt])
  @@index([status])
  @@index([fraudCategoryId])
  @@map("fraud_reports")
}

model SecurityAlert {
  id            String        @id @default(uuid())
  userId        String        @map("user_id")
  alertType     AlertType     @map("alert_type")
  severity      SeverityLevel @default(MEDIUM)
  title         String
  message       String
  fraudReportId String?       @map("fraud_report_id")
  transactionId String?       @map("transaction_id")
  isRead        Boolean       @default(false) @map("is_read")
  createdAt     DateTime      @default(now()) @map("created_at")

  // Relationships
  user        User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  fraudReport FraudReport? @relation(fields: [fraudReportId], references: [id], onDelete: SetNull)
  transaction Transaction? @relation(fields: [transactionId], references: [id], onDelete: SetNull)

  @@index([userId, isRead])
  @@map("security_alerts")
}

model AuditLog {
  id        String   @id @default(uuid())
  userId    String?  @map("user_id")
  action    String
  ipAddress String?  @map("ip_address")
  userAgent String?  @map("user_agent")
  metadata  Json?
  createdAt DateTime @default(now()) @map("created_at")

  // Relationships
  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([action])
  @@map("audit_logs")
}
